--- a/package.json
+++ b/package.json
@@ -30,45 +30,45 @@
     ]
   },
   "dependencies": {
-    "animejs": "^3.0.1",
-    "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.13.21",
+    "animejs": "^3.2.1",
+    "babel-plugin-styled-components": "^2.1.4",
+    "gatsby": "^5.11.0",
     "gatsby-image": "^2.2.6",
-    "gatsby-plugin-google-analytics": "^2.1.4",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-netlify": "^2.1.3",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.7",
-    "gatsby-plugin-sitemap": "^2.2.3",
-    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-google-gtag": "^5.11.0",
+    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.11.0",
+    "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-plugin-styled-components": "^6.11.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.1.6",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.5",
-    "gatsby-transformer-sharp": "^2.2.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "gatsby-remark-images": "^7.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-transition-group": "^4.2.1",
-    "scrollreveal": "^4.0.5",
-    "styled-components": "^4.3.2",
-    "yarn": "^1.17.3"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.5",
+    "scrollreveal": "^4.0.9",
+    "styled-components": "^6.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@upstatement/eslint-config": "0.4.2",
-    "@upstatement/prettier-config": "^0.3.0",
+    "@upstatement/eslint-config": "2.0.0",
+    "@upstatement/prettier-config": "^1.1.0",
     "babel-eslint": "^10.0.2",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1"
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.x.x",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.x.x",
+    "pretty-quick": "^3.1.3"
   }
 }
