--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "levi-lian-personal-website",
   "description": "Levi Lian's Personal Website",
   "version": "1.0.0",
-  "author": "Levi Lian <levilian@stanford.com>",
+  "author": "Levi Lian <levi@yona.ai>",
   "repository": {
     "type": "git",
     "url": "https://github.com/Levilian/Personal-Website"
